--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
       "forceConsistentCasingInFileNames": true,
       "outDir": "./dist"
     },
-    "include": ["server.ts"],
+    "include": ["src/server.ts"],
     "exclude": ["node_modules"]
   }
