--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,20 @@ services:
       - POSTGRES_DB=mydatabase
     ports:
       - 5432:5432
-      
+    volumes:
+      - db:/var/lib/postgresql/data
+      - ./database/SQL/:/docker-entrypoint-initdb.d/
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@example.com
+      - PGADMIN_DEFAULT_PASSWORD=adminpassword
+    ports:
+      - 8080:80
+    depends_on:
+      - postgresdb
+
   app:
     depends_on:
       - postgresdb
