--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
+    "@types/pg": "^8.10.9",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "pg": "^8.11.3",
     "pug": "^3.0.2"
   }
 }
